# heic-conversion-service

./: .gitattributes  Cargo.toml  README.md  build.rs
data/: .gitignore  test.heic  test.heic.md
data/dpreview/: IMG_0115.heic  IMG_0157.heic  IMG_0160.heic  README.md
data/nokia/: README.md
data/nokia/heifv2/: bothie_1440x960.heic  lights_1440x960.heic  stereo_1200x800.heic
data/nokia/image_sequences/: bird_burst.heic  candle_animation.heic  rally_burst.heic  sea1_animation.heic
data/nokia/images/: cheers_1440x960.heic  crowd_1440x960.heic  old_bridge_1440x960.heic  random_collection_1440x960.heic  season_collection_1440x960.heic  ski_jump_1440x960.heic  spring_1440x960.heic  summer_1440x960.heic  surfer_1440x960.heic  winter_1440x960.heic
data/nokia/overlay_grid_alpha/: alpha_1440x960.heic  grid_960x640.heic  overlay_1000x680.heic
data/nokia/quality_comp_candidate1/: compare_still_1.heic  compare_still_2.heic  compare_still_3.heic
proto/: convert.proto  heif_api.proto
src/: client.rs  heif.rs  jpeg.rs  server.rs
src/converter/: decoding_options.rs  encoder.rs  jpeg_encoder.rs  mod.rs
src/exif/: exif_data_block.rs  exif_endianness.rs  heif_exif.rs  mod.rs
src/services/: convert_service.rs  heif_api.rs  image_info.rs  info_service.rs  mod.rs
