[package]
name = "heif-api"
version = "0.1.0"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
edition = "2018"

[[bin]]
name = "heif-server"
path = "src/server.rs"

[[bin]]
name = "heif-client"
path = "src/client.rs"

[dependencies]
tonic = "0.4.3"
prost = "0.7.0"
prost-types = "0.7.0"
tokio = { version = "1.6.1", features = ["full"] }
log = "0.4.14"
env_logger = "0.8.4"
dotenv = "0.15.0"
r2d2 = "0.8.9"
libheif-rs = "0.15.0"
tempfile = "3.2.0"

[build-dependencies]
tonic-build = "0.4.2"
